# plex-poster-manager

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  plan.md  requirements-tui.txt  requirements.txt
.claude/hooks/: session-start.sh
.github/workflows/: local-tui-tests.yml
local-tui/: README.md  app.py  build_exe.bat  build_exe.sh  plex-poster.spec  plex.py  pyproject.toml  requirements.txt  scanner.py
local-tui/tests/: conftest.py  test_app.py  test_plex.py  test_scanner.py
src/: cleaner.py  config.py  main.py  plex_client.py  tui.py
